--- a/templates/epub2/content.opf.ejs
+++ b/templates/epub2/content.opf.ejs
@@ -19,6 +19,7 @@
     </metadata>
 
     <manifest>
+        <% if (locals.cover) { %><item id="cover" href="cover.xhtml" media-type="application/xhtml+xml"/><% } %>
         <item id="ncx" href="toc.ncx" media-type="application/x-dtbncx+xml" />
         <item id="toc" href="toc.xhtml" media-type="application/xhtml+xml" />
         <item id="css" href="style.css" media-type="text/css" />
@@ -46,6 +47,7 @@
                 <itemref idref="content_<%= index %>_<%= content.id %>"/>
             <% } %>
         <% }) %>
+        <% if(locals.cover) { %><itemref idref="cover"/><% } %>
         <itemref idref="toc" />
         <% content.forEach(function(content, index){ %>
             <% if(!content.beforeToc && !content.excludeFromToc){ %>
@@ -54,6 +56,7 @@
         <% }) %>
     </spine>
     <guide>
+        <% if (locals.cover) { %><reference type="cover" title="Cover" href="cover.xhtml"/><% } %>
         <reference type="text" title="Table of Content" href="toc.xhtml"/>
     </guide>
 </package>
