--- a/templates/epub3/content.opf.ejs
+++ b/templates/epub3/content.opf.ejs
@@ -35,12 +35,13 @@
     </metadata>
 
     <manifest>
+        <% if (locals.cover) { %><item id="cover" href="cover.xhtml" media-type="application/xhtml+xml"/><% } %>
         <item id="ncx" href="toc.ncx" media-type="application/x-dtbncx+xml" />
         <item id="toc" href="toc.xhtml" media-type="application/xhtml+xml" properties="nav"/>
         <item id="css" href="style.css" media-type="text/css" />
 
         <% if(locals.cover) { %>
-        <item id="image_cover" href="cover.<%= coverExtension %>" media-type="<%= coverMediaType %>" />
+        <item id="image_cover" href="cover.<%= coverExtension %>" media-type="<%= coverMediaType %>" properties="cover-image" />
         <% } %>
 
         <% images.forEach(function(image, index){ %>
@@ -62,6 +63,7 @@
                 <itemref idref="content_<%= index %>_<%= content.id %>"/>
             <% } %>
         <% }) %>
+        <% if (locals.cover) { %><itemref idref="cover"/><% } %>
         <itemref idref="toc" />
         <% content.forEach(function(content, index){ %>
             <% if(!content.beforeToc && !content.excludeFromToc){ %>
@@ -70,6 +72,7 @@
         <% }) %>
     </spine>
     <guide>
+        <% if (locals.cover) { %><reference type="cover" title="Cover" href="cover.xhtml"/><% } %>
         <reference type="text" title="Table of Content" href="toc.xhtml"/>
     </guide>
 </package>
