--- a/templates/template.css
+++ b/templates/template.css
@@ -27,3 +27,19 @@ hr {
 	border-bottom: 1px solid #dedede;
 	margin: 60px 10%;
 }
+
+/* Cover page */
+
+body.cover {
+	padding: 0;
+	margin: 0;
+}
+
+div.cover {
+	display: block;
+	text-align: center;
+	max-width: 100%;
+	height: auto;
+	/* ignored on older devices */
+	height: 100vh;
+}
