--- a/templates/epub2/content.opf.ejs
+++ b/templates/epub2/content.opf.ejs
@@ -33,7 +33,9 @@
         <% }) %>
 
         <% content.forEach(function(content, index){ %>
-        <item id="content_<%= index %>_<%= content.id %>" href="<%= content.href %>" media-type="application/xhtml+xml" />
+            <% if(!content.isCover){ %>
+                <item id="content_<%= index %>_<%= content.id %>" href="<%= content.href %>" media-type="application/xhtml+xml" />
+            <% } %>
         <% }) %>
 
         <% fonts.forEach(function(font, index) { %>
