--- a/templates/toc.ncx.ejs
+++ b/templates/toc.ncx.ejs
@@ -26,12 +26,14 @@
             <% } %>
         <% }) %>
 
+        <% if (locals.showToC) { %>
         <navPoint id="toc" playOrder="<%= _index++ %>" class="chapter">
             <navLabel>
                 <text><%= tocTitle %></text>
             </navLabel>
             <content src="toc.xhtml"/>
         </navPoint>
+        <% } %>
 
         <% content.forEach(function(content, index){ %>
             <% if(!content.excludeFromToc && !content.beforeToc){ %>
