--- a/templates/epub3/content.opf.ejs
+++ b/templates/epub3/content.opf.ejs
@@ -66,7 +66,7 @@
             <% } %>
         <% }) %>
         <% if (locals.cover) { %><itemref idref="cover"/><% } %>
-        <itemref idref="toc" />
+        <% if (locals.showToC) { %><itemref idref="toc" /><% } %>
         <% content.forEach(function(content, index){ %>
             <% if(!content.beforeToc && !content.excludeFromToc){ %>
                 <itemref idref="content_<%= index %>_<%= content.id %>"/>
@@ -75,6 +75,6 @@
     </spine>
     <guide>
         <% if (locals.cover) { %><reference type="cover" title="Cover" href="cover.xhtml"/><% } %>
-        <reference type="text" title="Table of Content" href="toc.xhtml"/>
+        <% if (locals.showToC) { %><reference type="text" title="Table of Content" href="toc.xhtml"/><% } %>
     </guide>
 </package>
