--- a/templates/epub2/content.opf.ejs
+++ b/templates/epub2/content.opf.ejs
@@ -13,7 +13,7 @@
         <dc:creator opf:role="aut" opf:file-as="<%= author.length ? author.join(",") : author %>"><%= author.length ? author.join(",") : author %></dc:creator>
         <dc:date opf:event="modification"><%= date %></dc:date>
         <dc:language><%= lang || "en" %></dc:language>
-        <meta name="cover" content="image_cover" />
+        <% if(locals.cover || (locals.useFirstImageAsCover && images.length)) { %><meta name="cover" content="<%= locals.cover ? 'image_cover' : 'image_0' %>"/><% } %>
         <meta name="generator" content="epub-gen" />
 
     </metadata>
@@ -23,24 +23,16 @@
         <item id="ncx" href="toc.ncx" media-type="application/x-dtbncx+xml" />
         <item id="toc" href="toc.xhtml" media-type="application/xhtml+xml" />
         <item id="css" href="style.css" media-type="text/css" />
-
         <% if(locals.cover) { %>
         <item id="image_cover" href="cover.<%= coverExtension %>" media-type="<%= coverMediaType %>" />
         <% } %>
-
         <% images.forEach(function(image, index){ %>
         <item id="image_<%= index %>" href="images/<%= image.id %>.<%= image.extension %>" media-type="<%= image.mediaType %>" />
         <% }) %>
-
         <% content.forEach(function(content, index){ %>
-            <% if(!content.isCover){ %>
-                <item id="content_<%= index %>_<%= content.id %>" href="<%= content.href %>" media-type="application/xhtml+xml" />
-            <% } %>
+        <% if(!content.isCover){ %><item id="content_<%= index %>_<%= content.id %>" href="<%= content.href %>" media-type="application/xhtml+xml" /><% } %>
         <% }) %>
-
-        <% fonts.forEach(function(font, index) { %>
-        <item id="font_<%= index %>" href="fonts/<%= font %>" media-type="application/x-font-ttf" />
-        <% }) %>
+        <% fonts.forEach(function(font, index) { %><item id="font_<%= index %>" href="fonts/<%= font %>" media-type="application/x-font-ttf" /><% }) %>
     </manifest>
 
     <spine toc="ncx">
@@ -59,6 +51,7 @@
     </spine>
     <guide>
         <% if (locals.cover) { %><reference type="cover" title="Cover" href="cover.xhtml"/><% } %>
-        <% if (locals.showToC) { %><reference type="text" title="Table of Content" href="toc.xhtml"/><% } %>
+        <% if (locals.showToC) { %><reference type="toc" title="Table of Content" href="toc.xhtml"/><% } %>
+        <reference type="text" title="Start of Content" href="<%= content.find((c) => !c.excludeFromToc).href %>"/>
     </guide>
 </package>
