--- a/templates/epub3/content.opf.ejs
+++ b/templates/epub3/content.opf.ejs
@@ -28,7 +28,7 @@
         <dc:date><%= stringDate %></dc:date>
         <meta property="dcterms:rights">All rights reserved</meta>
         <dc:rights>Copyright &#x00A9; <%= (new Date()).getFullYear() %> by <%= publisher || "anonymous" %></dc:rights>
-        <meta name="cover" content="image_cover"/>
+        <% if(locals.cover || (locals.useFirstImageAsCover && images.length)) { %><meta name="cover" content="<%= locals.cover ? 'image_cover' : 'image_0' %>"/><% } %>
         <meta name="generator" content="epub-gen" />
         <meta property="ibooks:specified-fonts">true</meta>
 
@@ -39,24 +39,17 @@
         <item id="ncx" href="toc.ncx" media-type="application/x-dtbncx+xml" />
         <item id="toc" href="toc.xhtml" media-type="application/xhtml+xml" properties="nav"/>
         <item id="css" href="style.css" media-type="text/css" />
-
-        <% if(locals.cover) { %>
-        <item id="image_cover" href="cover.<%= coverExtension %>" media-type="<%= coverMediaType %>" properties="cover-image" />
-        <% } %>
-
+        <% if(locals.cover) { %><item id="image_cover" href="cover.<%= coverExtension %>" media-type="<%= coverMediaType %>" properties="cover-image" /><% } %>
         <% images.forEach(function(image, index){ %>
-        <item id="image_<%= index %>" href="images/<%= image.id %>.<%= image.extension %>" media-type="<%= image.mediaType %>" />
+        <item id="image_<%= index %>" href="images/<%= image.id %>.<%= image.extension %>" media-type="<%= image.mediaType %>" <% if(index === 0 && !locals.cover && locals.useFirstImageAsCover){ %>properties="cover-image"<% } %> />
         <% }) %>
-
+        <% audioVideo.forEach(function(media, index){ %>
+        <item id="media_<%= index %>" href="audiovideo/<%= media.id %>.<%= media.extension %>" media-type="<%= media.mediaType %>" />
+        <% }) %>
         <% content.forEach(function(content, index){ %>
-            <% if(!content.isCover){ %>
-                <item id="content_<%= index %>_<%= content.id %>" href="<%= content.href %>" media-type="application/xhtml+xml" />
-            <% } %>
+        <% if(!content.isCover){ %><item id="content_<%= index %>_<%= content.id %>" href="<%= content.href %>" media-type="application/xhtml+xml" /><% } %>
         <% }) %>
-
-        <% fonts.forEach(function(font, index){%>
-        <item id="font_<%= index%>" href="fonts/<%= font %>" media-type="application/x-font-ttf" />
-        <%})%>
+        <% fonts.forEach(function(font, index){%><item id="font_<%= index%>" href="fonts/<%= font %>" media-type="application/x-font-ttf" /><%})%>
     </manifest>
 
     <spine toc="ncx">
@@ -75,6 +68,7 @@
     </spine>
     <guide>
         <% if (locals.cover) { %><reference type="cover" title="Cover" href="cover.xhtml"/><% } %>
-        <% if (locals.showToC) { %><reference type="text" title="Table of Content" href="toc.xhtml"/><% } %>
+        <% if (locals.showToC) { %><reference type="toc" title="Table of Content" href="toc.xhtml"/><% } %>
+        <reference type="text" title="Start of Content" href="<%= content.find((c) => !c.excludeFromToc).href %>"/>
     </guide>
 </package>
